scrollbar not fully fixed footer changed to heavly html

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -9,19 +9,7 @@
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(8px);
 }
-.modal-content-footer {
-    background-color: var(--white-bg);
-    margin: 1% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; 
-    max-width: 800px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
+
 
 .modal-content-footer.dark-mode {
     background-color: var(--text-color);
@@ -39,13 +27,7 @@
     align-items: center;
 }
 
-.footer-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 32px;
-    width: 800px;
-}
+
 
 .footer-list{
     display: flex;
@@ -130,4 +112,54 @@ object-fit: cover;
     display: flex;
     align-items: center;
     gap:10px;
+}
+
+.footer-container{
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    width: 800px;
+    max-height: 200vh;
+
+
+}
+.modal-content-footer {
+    background-color: var(--white-bg);
+    margin: 1% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+    max-height: 90%;
+    max-width: 800px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+    overflow-y: scroll;
+    scrollbar-width:thin;
+    scroll-behavior: smooth;
+    scroll-margin: 10px;
+}
+
+
+.modal-content-footer::-webkit-scrollbar{
+    width: 2vw;
+}
+
+
+.modal-content-footer::-webkit-scrollbar-thumb{
+background-color: gray;
+}
+
+.modal-content-footer::-webkit-scrollbar-track{
+
+}
+
+.modal-content-footer::-webkit-scrollbar-thumb:hover{
+}
+
+.modal-content-footer::-webkit-scrollbar-track:hover{
+
 }
